opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/accessor_core"
bug-reports: "https://github.com/janestreet/accessor_core/issues"
dev-repo: "git+https://github.com/janestreet/accessor_core.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/accessor_core/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "accessor_base"
  "core"
  "ppx_accessor"
  "ppx_jane"
  "ppx_optcomp"
  "dune"          {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Accessors for Core types, for use with the Accessor library"
description: "
This library provides accessors for numerous types in Core.
"
